# xspy

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
config/: config.yaml  emotion_tts_mapping.yaml  llm_models.json
doc/: TTS项目借鉴分析报告.md  auto-character-voice-engine.md  glossary.md  index-tts-vllm-deployment.md  module-audio-processor.md  module-emotion-system.md  module-novel-parser.md  module-task-manager.md  module-tts-api-client.md  module-voice-bank.md  module-web-ui.md  novel-audio-screenwriter-agent.md  novel-tts-design.md  tts-open-source-analysis.md
frontend/: package-lock.json  package.json
frontend/src/: App.vue  main.ts
frontend/src/api/: characters.ts  client.ts  novels.ts  scripts.ts  tasks.ts
frontend/src/router/: index.ts
frontend/src/stores/: novels.ts  tasks.ts
frontend/src/types/: index.ts
frontend/src/views/: CharactersView.vue  NovelsView.vue  ScriptView.vue  TasksView.vue
openspec/changes/novel-tts-architecture/: design.md  proposal.md  tasks.md
resources/prompts/character_analysis/: analyze.j2
resources/prompts/emotion_inference/: infer.j2
resources/prompts/screenwriter/: split.j2
src/xspy/: __init__.py  __main__.py
src/xspy/agent/: __init__.py  __main__.py  service.py
src/xspy/audio/: __init__.py  (+4 more)
tests/: conftest.py
tests/integration/: test_smoke.py
tests/unit/: test_checkpoint.py  test_config.py  test_emotion_subs.py  test_exceptions.py  test_llm.py  test_models.py  test_parser.py  test_persistence.py  test_progress.py  test_tts_subs.py  test_voice_bank.py
(+71 files in other folders)
