[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "xspy"
version = "0.1.0"
description = "Novel-to-audiobook fully automated dubbing system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "structlog>=24.0",
    "dependency-injector>=4.41",
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "httpx>=0.27",
    "openai>=1.30",
    "jinja2>=3.1",
    "chardet>=5.0",
    "pydub>=0.25",
    "audioop-lts>=0.2;python_version>='3.13'",
    "ebooklib>=0.18",
    "pdfplumber>=0.11",
    "pyyaml>=6.0",
    "click>=8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=3.0",
    "pip-audit>=2.7",
]

[project.scripts]
xspy = "xspy.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/xspy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Function-level unit tests (no I/O, no external deps)",
    "module: Module-level tests with intermediate data fixtures",
    "project: Project-level end-to-end tests",
]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/xspy"]
omit = ["src/xspy/__main__.py"]

[tool.coverage.report]
show_missing = true

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"
include = ["src/xspy"]
exclude = ["tests"]
reportMissingImports = true
reportMissingTypeStubs = false
